--- a/index.html
+++ b/index.html
@@ -247,12 +247,14 @@
 
                 <div class="col-12 advertising">
                   <a href="#"><img class="img-responsive img-fluid" src="img/Реклама.png" alt="Реклама"></a>
-                </div> <!--Реклама-->
+                </div> <!--Реклама--> <!--Реклама-->
 
               </div>
             </div>
 
-            <div class="col-12 col-sm-6 col-lg-3"> <!--Четвертый блок (Боковой блок)-->
+            <div class="col-12 col-sm-12 col-md-12 col-lg-3"> <!--Четвертый блок (Боковой блок)-->
+              <div class="row">
+              <div class="col-sm-6 col-lg-12">
               <div class="cloud">
                 <p>В вашей корзине</p>
                 <p><b>7 товаров на суму 1337 грн.</b></p>
@@ -311,11 +313,11 @@
                   </div>
                 </div>
               </div><!--Бренды-->
-            <!-- </div> -->
+            </div>
 
-            <!-- <div class="col-12 col-sm-6 col-lg-3"> -->
+            <div class="col-sm-6 col-lg-12">
               <div class="Delivery_Advertising">
-                <a href="#"><img src="img/Доставка.png" alt="доставка"></a>
+                <a href="#"><img class="img-responsive img-fluid" src="img/Доставка.png" alt="доставка"/></a>
               </div> <!--Реклама-->
 
               <div class="news background_blank"> <!--Новости-->
@@ -332,7 +334,9 @@
                 </div>
                 <a href="#" >Читать все новости »</a>
               </div>
-            </div>
+                  </div>
+              </div>
+            </div> <!--Конец четвертого блока-->
 
           </div>
 
