--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Торговый дом "2 Гуся"</title>
+  <link rel="stylesheet" href="fonts/fontawesome/all.min.css">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -20,7 +21,6 @@
 
         <div class="col-8 col-sm-10 col-lg-9">    <!--Для товаров и рекламы-->
           <div class="row">
-
             <div class="col-12 col-sm-6 col-lg-4"> <!--Первый блок-->
 
               <div class="object">
@@ -171,170 +171,187 @@
             <div class="row col-12 col-sm-12 col-lg-4 align-content-start"> <!--Третий блок-->
               <!-- <div class="col-12 col-sm-6 col-lg-12"> -->
 
-                <div class="col-12 col-sm-6 col-lg-12 order-sm-2">
-                  <div class="object">
-                    <div class="Name">
-                      <img src="img/Гигиена.png" alt="Гигиена">
-                      <h4>Гигиена</h4>
-                    </div>
-                    <ul>
-                      <li><a href="#">Ванночки</a></li>
-                      <li><a href="#">Горшочки</a></li>
-                      <li><a href="#">Подгузники</a></li>
-                    </ul>
+              <div class="col-12 col-sm-6 col-lg-12 order-sm-2 order-lg-1">
+                <div class="object">
+                  <div class="Name">
+                    <img src="img/Гигиена.png" alt="Гигиена">
+                    <h4>Гигиена</h4>
                   </div>
-                  <div class="object">
-                    <div class="Name">
-                      <img src="img/Игрушки.png" alt="Игрушки">
-                      <h4>Игрушки</h4>
-                    </div>
-                    <ul>
-                      <li><a href="#">Игрушечки</a></li>
-                      <li><a href="#">Мягкие игрушечки</a></li>
-                      <li><a href="#">Игровые домики</a></li>
-                      <li><a href="#">Конструкторы</a></li>
-                      <li><a href="#">Электромобильчеки</a></li>
-                    </ul>
-                  </div>
+                  <ul>
+                    <li><a href="#">Ванночки</a></li>
+                    <li><a href="#">Горшочки</a></li>
+                    <li><a href="#">Подгузники</a></li>
+                  </ul>
                 </div>
-                <div class="col-12 col-sm-6 col-lg-12 order-sm-1">
-                  <div class="object">
-                    <div class="Name">
-                      <img src="img/Активные_игры.png" alt="Активные игры">
-                      <h4>Активные игры</h4>
-                    </div>
-                    <ul>
-                      <li><a href="#">Весолипедики</a></li>
-                      <li><a href="#">Самокатики</a></li>
-                      <li><a href="#">Качельки</a></li>
-                      <li><a href="#">Горочки</a></li>
-                    </ul>
+                <div class="object">
+                  <div class="Name">
+                    <img src="img/Игрушки.png" alt="Игрушки">
+                    <h4>Игрушки</h4>
                   </div>
-                  <div class="object">
-                    <div class="Name">
-                      <img src="img/Товары_для_мам.png" alt="Товары для мам и малышей, электроника">
-                      <h4>Товары для мам и малышей, электроника</h4>
-                    </div>
-                    <ul>
-                      <li><a href="#">Блендеры</a></li>
-                      <li><a href="#">Видеоняня</a></li>
-                      <li><a href="#">Ночники</a></li>
-                      <li><a href="#">Термометры</a></li>
-                      <li><a href="#">Подогреватели для бутылочек</a></li>
-                      <li><a href="#">Увлажнители, очистители воздуха</a></li>
-                      <li><a href="#">Стерилизаторы</a></li>
-                      <li><a href="#">Молокоотсосы</a></li>
-                      <li><a href="#">Электронные весы</a></li>
-                      <li><a href="#">Радионяни</a></li>
-                      <li><a href="#">Рюкзаки-кенгуру</a></li>
-                      <li><a href="#">Бутылочки</a></li>
-                      <li><a href="#">Соски</a></li>
-                    </ul>
-                  </div>
+                  <ul>
+                    <li><a href="#">Игрушечки</a></li>
+                    <li><a href="#">Мягкие игрушечки</a></li>
+                    <li><a href="#">Игровые домики</a></li>
+                    <li><a href="#">Конструкторы</a></li>
+                    <li><a href="#">Электромобильчеки</a></li>
+                  </ul>
                 </div>
+              </div>
+              <div class="col-12 col-sm-6 col-lg-12 order-sm-1 order-lg-2">
+                <div class="object">
+                  <div class="Name">
+                    <img src="img/Активные_игры.png" alt="Активные игры">
+                    <h4>Активные игры</h4>
+                  </div>
+                  <ul>
+                    <li><a href="#">Весолипедики</a></li>
+                    <li><a href="#">Самокатики</a></li>
+                    <li><a href="#">Качельки</a></li>
+                    <li><a href="#">Горочки</a></li>
+                  </ul>
+                </div>
+                <div class="object">
+                  <div class="Name">
+                    <img src="img/Товары_для_мам.png" alt="Товары для мам и малышей, электроника">
+                    <h4>Товары для мам и малышей, электроника</h4>
+                  </div>
+                  <ul>
+                    <li><a href="#">Блендеры</a></li>
+                    <li><a href="#">Видеоняня</a></li>
+                    <li><a href="#">Ночники</a></li>
+                    <li><a href="#">Термометры</a></li>
+                    <li><a href="#">Подогреватели для бутылочек</a></li>
+                    <li><a href="#">Увлажнители, очистители воздуха</a></li>
+                    <li><a href="#">Стерилизаторы</a></li>
+                    <li><a href="#">Молокоотсосы</a></li>
+                    <li><a href="#">Электронные весы</a></li>
+                    <li><a href="#">Радионяни</a></li>
+                    <li><a href="#">Рюкзаки-кенгуру</a></li>
+                    <li><a href="#">Бутылочки</a></li>
+                    <li><a href="#">Соски</a></li>
+                  </ul>
+                </div>
+              </div>
 
               <!-- </div> -->
             </div> <!-- Конец третьего блока -->
             <div class="col-12 advertising"><!--Реклама-->
               <a href="#"><img class="img-responsive img-fluid" src="img/Реклама.png" alt="Реклама"></a>
             </div> <!--Конец реклама-->
-
-        </div>
-      </div>
-
-      <div class="col-10 col-sm-10 col-lg-3 justify-content-center s"> <!--Четвертый блок (Боковой блок)-->
-        <div class="row">
-          <div class="col-sm-6 col-lg-12 for_flex_1">
-            <div class="cloud">
-              <p>В вашей корзине</p>
-              <p><b>7 товаров на суму 1337 грн.</b></p>
-              <button type="button" class="btn btn-dark btn-sm">оформить</button>
-            </div>    <!--Корзина-->
-
-            <div class="brand background_blank for_flex_2">
-              <h4>Список брендов</h4>
-              <div class="row">
-                <div class="col">
-                  <ul>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                  </ul>
-                </div>
-                <div class="col">
-                  <ul>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                    <li><a href="#">zxc</a></li>
-                  </ul>
-                </div>
-              </div>
-            </div><!--Бренды-->
           </div>
+        </div>
 
-          <div class="col-sm-6 col-lg-12 for_flex_1">
-            <div class="Delivery_Advertising">
-              <a href="#"><img  src="img/Доставка.png" class="responsive" alt="доставка"/></a>
-            </div> <!--Реклама-->
+        <div class="col-10 col-sm-10 col-lg-3 justify-content-center s"> <!--Четвертый блок (Боковой блок)-->
+          <div class="row">
+            <div class="col-sm-6 col-lg-12 for_flex_1">
+              <div class="cloud">
+                <p>В вашей корзине</p>
+                <p><b>7 товаров на суму 1337 грн.</b></p>
+                <button type="button" class="btn btn-dark btn-sm">оформить</button>
+              </div>    <!--Корзина-->
+              <div class="brand background_blank for_flex_2">
+                <h4>Список брендов</h4>
+                <div class="row">
+                  <div class="col">
+                    <ul>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                    </ul>
+                  </div>
+                  <div class="col">
+                    <ul>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                      <li><a href="#">zxc</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div><!--Бренды-->
+            </div>
+            <div class="col-sm-6 col-lg-12 for_flex_1">
+              <div class="Delivery_Advertising">
+                <a href="#"><img  src="img/Доставка.png" class="responsive" alt="доставка"/></a>
+              </div> <!--Реклама-->
 
-            <div class="news background_blank for_flex_2"> <!--Новости-->
-              <h4>Новости магазина</h4>
-              <div>
-                <div class="date">9/11/2001</div>
-                <h6>Заголовок новости</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex molestiae, debitis cumque aspernatur magni, ipsum dolorem. Placeat ipsa totam enim aspernatur atque illo quibusdam labore, odit ut officia.<a href="#">Подобнее »</a></p>
+              <div class="news background_blank for_flex_2"> <!--Новости-->
+                <h4>Новости магазина</h4>
+                <div>
+                  <div class="date">9/11/2001</div>
+                  <h6>Заголовок новости</h6>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex molestiae, debitis cumque aspernatur magni, ipsum dolorem. Placeat ipsa totam enim aspernatur atque illo quibusdam labore, odit ut officia.<a href="#">Подобнее »</a></p>
+                </div>
+                <div>
+                  <div class="date">9/11/2001</div>
+                  <h6>Еще один заголовок</h6>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel dolorum at, recusandae velit reiciendis consequuntur odit magni facere! Consequuntur officiis porro ut sit temporibus voluptates sapiente cupiditate.<a href="#">Подобнее »</a></p>
+                </div>
+                <a href="#" >Читать все новости »</a>
               </div>
-              <div>
-                <div class="date">9/11/2001</div>
-                <h6>Еще один заголовок</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel dolorum at, recusandae velit reiciendis consequuntur odit magni facere! Consequuntur officiis porro ut sit temporibus voluptates sapiente cupiditate.<a href="#">Подобнее »</a></p>
+            </div>
+          </div>
+        </div> <!--Конец четвертого блока-->
+
+      </div>
+    </div>
+
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="row justify-content-center">
+              <div class="col-5 col-md-3 foot "><div><a href="#"><img src="img/Лого_foot.png" alt="Лого_foot"></a></div></div>
+              <div class="col-5 col-md-3 foot "><div class="p"><i class="fas fa-phone-alt"></i><span>8 (916)</span> 227 1234</div></div>
+              <div class="col-5 col-md-3 foot ">
+                <div><a href="#" class="bg_for_i"><i class="fab fa-twitter i"></i></a></div>
+                <div><a href="#" class="bg_for_i"><i class="fab fa-vk"></i></a></div>
+                <div><a href="#" class="bg_for_i"><i class="fab fa-facebook-f ii"></i></a></div>
+                <div><a href="#" class="bg_for_i"><i class="fas fa-pencil-alt"></i></a></div>
+                <div><a href="#" class="bg_for_i"><i class="fas fa-wifi"></i></a></div>
+                <div><a href="#" class="bg_for_i"><i class="fas fa-at"></i></a></div>
+                <div><a href="#" class="bg_for_i"><i class="fab fa-odnoklassniki ii"></i></a></div>
               </div>
-              <a href="#" >Читать все новости »</a>
+              <div class="col-5 col-md-3 foot  logo_footer">
+                <div><img src="img/logo_footer.png" alt="logo_footer"></div>
+              </div>
             </div>
           </div>
         </div>
-      </div> <!--Конец четвертого блока-->
+      </div>
+    </footer>
 
-    </div>
-  </div>
-
-  <footer>
-    <div class="container">
-    </div>
-  </footer>
-
-</body>
-</html>
+  </body>
+  </html>
