--- a/index.html
+++ b/index.html
@@ -12,6 +12,28 @@
 
   <header>
     <div class="container">
+      <div class="row">
+        <div class="col-md-3  columnsn">
+          <div class="site_search">
+            <form>
+              <div class="search_btn">
+                <i class="fas fa-search-dollar"></i>
+              </div>
+              <input type="search" class="site_search_inpt" name="site_search" placeholder="    Поиск по сайту">
+            </form>
+          </div>
+          <div class="buttons d-flex justify-content-between">
+            <div class="about bt">
+              <a href=""><i class="fas fa-fighter-jet"></i>О компании</a>
+            </div>
+            <div class="delivery bt">
+              <a href=""><i class="fas fa-people-carry"></i>Доставка</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6"></div>
+        <div class="col-md-3"></div>
+      </div>
     </div>
   </header>
 
