--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
           <div class="site_search">
             <form>
               <div class="search_btn">
-                <i class="fas fa-search-dollar"></i>
+                <button type="button" name="button">
+                  <i class="fas fa-search-dollar"></i>
+                </button>
               </div>
               <input type="search" class="site_search_inpt" name="site_search" placeholder="    Поиск по сайту">
             </form>
@@ -30,14 +32,28 @@
               <a href=""><i class="fas fa-people-carry"></i>Доставка</a>
             </div>
           </div>
+          <div class="head_text">
+            <p class="p1">Товары наши хороши –</p>
+            <p class="p2">развивайтесь малыши!</p>
+          </div>
         </div>
-        <div class="col-md-6"></div>
-        <div class="col-md-3"></div>
+        <div class="col-md-6 ">
+          <img class="img-fluid img-responsive" src="img/Логотип.png" alt="">
+        </div>
+        <div class="col-md-3 columnsn_2">
+          <div class="pp"><i class="fas fa-phone-alt"></i><span class= "span_phone">8 (916)</span> 227 1234</div>
+          <div class="bg_head for_p1">
+            <i class="fas fa-stopwatch-20"></i> <p>Пн-Пт: 9<sup>00</sup>-20<sup>00</sup></p><p> Сб-Вс: 10<sup>00</sup>-20<sup>00</sup></p>
+          </div>
+          <div class="bg_head for_p2">
+            <a href="#"><p>Заказать обратный звонок</p><i class="fas fa-mobile-alt"></i></a>
+          </div>
+        </div>
       </div>
     </div>
   </header>
 
-  <div class="content"><!--Для всего контента-->
+  <div class="content"> <!--Для всего контента-->
     <div class="container">
       <div class="row justify-content-center">
 
@@ -349,31 +365,33 @@
 
       </div>
     </div>
+  </div>
 
-    <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <div class="row justify-content-center">
-              <div class="col-5 col-md-3 foot "><div><a href="#"><img src="img/Лого_foot.png" alt="Лого_foot"></a></div></div>
-              <div class="col-5 col-md-3 foot "><div class="p"><i class="fas fa-phone-alt"></i><span>8 (916)</span> 227 1234</div></div>
-              <div class="col-5 col-md-3 foot ">
-                <div><a href="#" class="bg_for_i"><i class="fab fa-twitter i"></i></a></div>
-                <div><a href="#" class="bg_for_i"><i class="fab fa-vk"></i></a></div>
-                <div><a href="#" class="bg_for_i"><i class="fab fa-facebook-f ii"></i></a></div>
-                <div><a href="#" class="bg_for_i"><i class="fas fa-pencil-alt"></i></a></div>
-                <div><a href="#" class="bg_for_i"><i class="fas fa-wifi"></i></a></div>
-                <div><a href="#" class="bg_for_i"><i class="fas fa-at"></i></a></div>
-                <div><a href="#" class="bg_for_i"><i class="fab fa-odnoklassniki ii"></i></a></div>
-              </div>
-              <div class="col-5 col-md-3 foot  logo_footer">
-                <div><img src="img/logo_footer.png" alt="logo_footer"></div>
-              </div>
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="row justify-content-center">
+            <div class="col-5 col-md-3 foot "><div><a href="#"><img src="img/Лого_foot.png" alt="Лого_foot"></a></div></div>
+            <div class="col-5 col-md-3 foot "><div class="pp"><i class="fas fa-phone-alt"></i><span .span_phone>8 (916)</span> 227 1234</div></div>
+            <div class="col-5 col-md-3 foot ">
+              <div><a href="#" class="bg_for_i"><i class="fab fa-twitter i"></i></a></div>
+              <div><a href="#" class="bg_for_i"><i class="fab fa-vk"></i></a></div>
+              <div><a href="#" class="bg_for_i"><i class="fab fa-facebook-f ii"></i></a></div>
+              <div><a href="#" class="bg_for_i"><i class="fas fa-pencil-alt"></i></a></div>
+              <div><a href="#" class="bg_for_i"><i class="fas fa-wifi"></i></a></div>
+              <div><a href="#" class="bg_for_i"><i class="fas fa-at"></i></a></div>
+              <div><a href="#" class="bg_for_i"><i class="fab fa-odnoklassniki ii"></i></a></div>
+            </div>
+            <div class="col-5 col-md-3 foot  logo_footer">
+              <div><img src="img/logo_footer.png" alt="logo_footer"></div>
             </div>
           </div>
         </div>
       </div>
-    </footer>
+    </div>
+  </footer>
 
-  </body>
-  </html>
+</body>
+
+</html>
