--- a/index.html
+++ b/index.html
@@ -61,24 +61,24 @@
           <div class="row">
             <div class="col-12 col-sm-6 col-lg-4"> <!--Первый блок-->
 
-              <div class="object">
+              <div class="object_li">
                 <div class="Name">
                   <img src="img/Коляски.png" alt="Коляски">
                   <h4>Коляски</h4>
                 </div>
                 <ul>
-                  <li><a href="#">Коляски для новорожденных</a></li>
-                  <li><a href="#">Прогулочные коляски</a></li>
-                  <li><a href="#">Коляски трости</a></li>
-                  <li><a href="#">Универсальные коляски</a></li>
-                  <li><a href="#">Коляски для двойни</a></li>
-                  <li><a href="#">Конверты</a></li>
-                  <li><a href="#">Защита от дождя и солнца</a></li>
-                  <li><a href="#">Сумки к коляскам</a></li>
-                  <li><a href="#">Запчасти</a></li>
+                  <li><a href="kolyaski.html">Коляски для новорожденных</a></li>
+                  <li><a href="kolyaski.html">Прогулочные коляски</a></li>
+                  <li><a href="kolyaski.html">Коляски трости</a></li>
+                  <li><a href="kolyaski.html">Универсальные коляски</a></li>
+                  <li><a href="kolyaski.html">Коляски для двойни</a></li>
+                  <li><a href="kolyaski.html">Конверты</a></li>
+                  <li><a href="kolyaski.html">Защита от дождя и солнца</a></li>
+                  <li><a href="kolyaski.html">Сумки к коляскам</a></li>
+                  <li><a href="kolyaski.html">Запчасти</a></li>
                 </ul>
               </div>
-              <div class="object">
+              <div class="object_li">
                 <div class="Name">
                   <img src="img/Мебель.png" alt="Мебель и матрасы">
                   <h4>Мебель и матрасы</h4>
@@ -92,7 +92,7 @@
                   <li><a href="#">Шкафы</a></li>
                 </ul>
               </div>
-              <div class="object">
+              <div class="object_li">
                 <div class="Name">
                   <img src="img/Автокресла.png" alt="Автокресла">
                   <h4>Автокресла</h4>
@@ -108,7 +108,7 @@
                   <li><a href="#">Аксесуары для автокресел</a></li>
                 </ul>
               </div>
-              <div class="object">
+              <div class="object_li">
                 <div class="Name">
                   <img src="img/Развитие.png" alt="Развитие">
                   <h4>Развитие</h4>
@@ -120,7 +120,7 @@
                   <li><a href="#">Прыгунки</a></li>
                 </ul>
               </div>
-              <div class="object">
+              <div class="object_li">
                 <div class="Name">
                   <img src="img/Зимние_товары.png" alt="Зимние товары">
                   <h4>Зимние товары</h4>
@@ -137,7 +137,7 @@
             </div> <!-- Конец первого блока -->
             <div class="col-12 col-sm-6 col-lg-4">  <!-- Второй блок-->
 
-              <div class="object">
+              <div class="object_li">
                 <div class="Name">
                   <img src="img/Одежда_для_малышей.png" alt="Одежда и обувь для малышей">
                   <h4>Одежда и обувь для малышей</h4>
@@ -154,7 +154,7 @@
                   <li><a href="#">Чепчики</a></li>
                 </ul>
               </div>
-              <div class="object">
+              <div class="object_li">
                 <div class="Name">
                   <img src="img/Одежда_для_беременных.png" alt="Одежда для беременныех">
                   <h4>Одежда для беременных</h4>
@@ -194,7 +194,7 @@
                   <li><a href="#">Накладной животик</a></li>
                 </ul>
               </div>
-              <div class="object">
+              <div class="object_li">
                 <div class="Name">
                   <img src="img/Товары_по_сниженным.png" alt="Товары по сниженным ценам">
                   <h4>Товары по сниженным ценам</h4>
@@ -210,7 +210,7 @@
               <!-- <div class="col-12 col-sm-6 col-lg-12"> -->
 
               <div class="col-12 col-sm-6 col-lg-12 order-sm-2 order-lg-1">
-                <div class="object">
+                <div class="object_li">
                   <div class="Name">
                     <img src="img/Гигиена.png" alt="Гигиена">
                     <h4>Гигиена</h4>
@@ -221,7 +221,7 @@
                     <li><a href="#">Подгузники</a></li>
                   </ul>
                 </div>
-                <div class="object">
+                <div class="object_li">
                   <div class="Name">
                     <img src="img/Игрушки.png" alt="Игрушки">
                     <h4>Игрушки</h4>
@@ -236,7 +236,7 @@
                 </div>
               </div>
               <div class="col-12 col-sm-6 col-lg-12 order-sm-1 order-lg-2">
-                <div class="object">
+                <div class="object_li">
                   <div class="Name">
                     <img src="img/Активные_игры.png" alt="Активные игры">
                     <h4>Активные игры</h4>
@@ -248,7 +248,7 @@
                     <li><a href="#">Горочки</a></li>
                   </ul>
                 </div>
-                <div class="object">
+                <div class="object_li">
                   <div class="Name">
                     <img src="img/Товары_для_мам.png" alt="Товары для мам и малышей, электроника">
                     <h4>Товары для мам и малышей, электроника</h4>
