--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <p class="p2">развивайтесь малыши!</p>
           </div>
         </div>
-        <div class="col-md-6 ">
+        <div class="col-md-6 head_logo">
           <img class="img-fluid img-responsive" src="img/Логотип.png" alt="">
         </div>
         <div class="col-md-3 columnsn_2">
@@ -373,7 +373,7 @@
         <div class="col-12">
           <div class="row justify-content-center">
             <div class="col-5 col-md-3 foot "><div><a href="#"><img src="img/Лого_foot.png" alt="Лого_foot"></a></div></div>
-            <div class="col-5 col-md-3 foot "><div class="pp"><i class="fas fa-phone-alt"></i><span .span_phone>8 (916)</span> 227 1234</div></div>
+            <div class="col-5 col-md-3 foot "><div class="pp"><i class="fas fa-phone-alt"></i><span class="span_phone">8 (916)</span> 227 1234</div></div>
             <div class="col-5 col-md-3 foot ">
               <div><a href="#" class="bg_for_i"><i class="fab fa-twitter i"></i></a></div>
               <div><a href="#" class="bg_for_i"><i class="fab fa-vk"></i></a></div>
