--- a/kolyaski.html
+++ b/kolyaski.html
@@ -12,7 +12,7 @@
 
   <!-- <all> -->
 
-    <header>
+  <header>
     <div class="container">
       <div class="row">
         <div class="col-md-3  columnsn">
@@ -55,46 +55,82 @@
     </div>
   </header>
 
-    <section class="main">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-9"> <!--основна-->
-            <div class="col-lg-12 start"><!--Начало-->
-              <div class="col-lg-12"><p><a href="index.html">Главная  » </a><a href="#"> Товары для детей  »  </a><a href="#"> Коляски</p></a></div>
-              <!-- <div class="col-lg-6"></div> -->
-              <div class="col-lg-12"><h1>Детские коляски</h1></div>
-              <!-- <div class="col-lg-4"></div> -->
-            </div>
+  <section class="main">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-9"> <!--основна-->
+          <div class="col-lg-12 start"><!--Начало-->
+            <div class="col-lg-12"><p><a href="index.html">Главная  » </a><a href="#"> Товары для детей  »  </a><a href="#"> Коляски</p></a></div>
+            <!-- <div class="col-lg-6"></div> -->
+            <div class="col-lg-12"><h1>Детские коляски</h1></div>
+            <!-- <div class="col-lg-4"></div> -->
+          </div>
 
-            <div class="col-lg-12 d-flex justify-content-center align-items-center sort_by">
-              <form>
-                <input type="button" name="btn_sort" value="Сортировать"></button>
-                <input type="button" name="btn_popular" value="По популярности"></button>
-                <input type="button" name="btn_price" value="По цене"></button>
-                <input type="button" name="btn_price_and_available" value="По цене и наличию"></button>
-                <input type="button" name="btn_brand" value="По брендам"></button>
-              </form>
-            </div>
+          <div class="col-lg-12 d-flex justify-content-center align-items-center sort_by">
+            <form>
+              <input type="button" name="btn_sort" value="Сортировать"></button>
+              <input type="button" name="btn_popular" value="По популярности"></button>
+              <input type="button" name="btn_price" value="По цене"></button>
+              <input type="button" name="btn_price_and_available" value="По цене и наличию"></button>
+              <input type="button" name="btn_brand" value="По брендам"></button>
+            </form>
+          </div>
 
-            <div class="col-lg-12"> <!--Товары-->
-              <div class="object">
-                <p>Коляска Chicco Lite Way stroller Red Passion</p>
-                <div class="info_tovar">
-                  <div class="info_tovar_img"></div>
-                  <div class="info_tovar_li1"></div>
-                  <div class="info_tovar_li2"></div>
-                  <div class="info_tovar_price"></div>
+          <div class="col-lg-12"> <!--Товары-->
+            <div class="object ">
+              <p>Коляска Chicco Lite Way stroller Red Passion</p>
+              <div class="info_tovar">
+                <div class="info_tovar_img">
+                  <img src="img/Коляска.png" alt="Коляска">
+                </div>
+                <!-- <div class="hi"> -->
+                <div class="info_tovar_li1">
+                  <ul>
+                    <li>Тип</li>
+                    <li>Возраст</li>
+                    <li>Механизм складывания</li>
+                    <li>Количество колес</li>
+                    <li>Колеса</li>
+                    <li>Максимальный возраст</li>
+                    <li>Цвет</li>
+                  </ul>
+                </div>
+                <div class="info_tovar_li3">
+                  <ul>
+                    <li> </li>
+                    <li> </li>
+                    <li> </li>
+                    <li> </li>
+                    <li> </li>
+                    <li> </li>
+                    <li> </li>
+                  </ul>
+                </div>
+                <div class="info_tovar_li2">
+                  <ul>
+                    <li>Прогулочная</li>
+                    <li>Один</li>
+                    <li>Трость</li>
+                    <li>8</li>
+                    <li>Резиновые</li>
+                    <li>3 года</li>
+                    <li>Синий</li>
+                  </ul>
+                </div>
+                <!-- </div> -->
+                <div class="info_tovar_price">
                 </div>
               </div>
             </div>
-
           </div>
-          <div class="col-lg-3"></div> <!--боковое меню-->
-        </div>
-      </div>
-    </section>
 
-    <footer>
+        </div>
+        <div class="col-lg-3"></div> <!--боковое меню-->
+      </div>
+    </div>
+  </section>
+
+  <footer>
     <div class="container">
       <div class="row">
         <div class="col-12">
